# ABM

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  sp500_daily.csv
crashes_abm/: __init__.py  agent.py  metrics.py  model.py  network.py  parameters.py  prospect_theory.py
crashes_abm/analysis/: __init__.py  early_warning.py  experiments.py  sensitivity.py  stylised_facts.py  validation.py
figures/: bankruptcy.csv  early_warning.csv  morris_screen.csv  necessity.csv  population.csv  sobol_crash_freq.csv  sobol_excess_kurtosis.csv  sobol_max_drawdown.csv  sobol_vol_cluster.csv  sp500_comparison.csv  topology.csv
scripts/: reproduce_all.py  run_demo.py
